FIX - lay out and created new pages services

--- a/app/globals.css
+++ b/app/globals.css
@@ -32,6 +32,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --color-primary: var(--primary-color);
 }
 
 @media (prefers-color-scheme: dark) {
