--- a/app/globals.css
+++ b/app/globals.css
@@ -122,7 +122,7 @@ body {
   font-family: var(--font-primary);
   font-weight: 400;
   color: white;
-  text-align: center;
+  text-align: start;
   line-height: 120%;
   font-size: 14px;
 }
@@ -230,7 +230,7 @@ body {
   height: 48px;
   padding: 12px 24px;
   border-radius: 8px;
-border: 1px solid #FF4900;
+  border: 1px solid #FF4900;
   background-color: var(--primary-color);
   color: white;
   font-family: var(--font-button);
@@ -502,11 +502,22 @@ body {
    ======================================== */
 
 @utility text-gradient {
-  background: radial-gradient(18.08% 413.84% at 51.02% 51.02%, #FFFFFF 35%, #656565 100%);
+  display: inline-block;
+  width: fit-content;
+  background: linear-gradient(90deg,
+      #656565 0%,
+      #656565 20%,
+      #FFFFFF 40%,
+      #FFFFFF 60%,
+      #656565 80%,
+      #656565 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
 }
+
 
 .service-heading-h1 {
   @apply text-gradient font-semibold;
@@ -554,21 +565,17 @@ body {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background: linear-gradient(
-    180deg,
-    var(--primary-color) 0%,
-    rgba(255, 89, 0, 0.6) 100%
-  );
+  background: linear-gradient(180deg,
+      var(--primary-color) 0%,
+      rgba(255, 89, 0, 0.6) 100%);
   border-radius: 2px;
   box-shadow: inset 0 0 6px rgba(255, 89, 0, 0.1);
   transition: all 0.3s ease;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background: linear-gradient(
-    180deg,
-    #ff6b1a 0%,
-    var(--primary-color) 100%
-  );
+  background: linear-gradient(180deg,
+      #ff6b1a 0%,
+      var(--primary-color) 100%);
   box-shadow: inset 0 0 8px rgba(255, 89, 0, 0.3);
 }
